--- a/pay.html
+++ b/pay.html
@@ -1,130 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"/>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>UPI Payment</title>
+<title>UPI Payment Gateway</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<style>
-.fade-out { animation: fadeOut 3s forwards; }
-@keyframes fadeOut { from {opacity:1;} to {opacity:0;} }
-button:disabled, a:disabled { opacity:0.5; cursor:not-allowed; pointer-events:none; }
-</style>
 </head>
-<body class="bg-gradient-to-r from-purple-50 to-indigo-50 min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-gray-50 min-h-screen flex flex-col items-center p-6">
 
-<div id="paymentContainer" class="max-w-md w-full bg-white rounded-3xl shadow-2xl p-8 border border-gray-200 text-center">
-
-  <!-- Header with Countdown -->
-  <div class="flex justify-between items-center mb-4 
-              bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-500 
-              p-4 rounded-2xl shadow-lg text-white">
-    <h1 id="appName" class="text-3xl font-extrabold"></h1>
-    <div class="text-white font-medium text-lg">Time Left: <span id="timer">09:00</span></div>
-  </div>
-
-  <p id="clientName" class="text-xl font-semibold text-gray-700 mb-2"></p>
-  <p id="amount" class="text-2xl font-bold text-green-600 mb-4"></p>
-
-  <!-- UPI ID + Copy -->
-  <div class="flex justify-center items-center gap-2 mb-4">
-    <input id="upiId" type="text" readonly class="px-4 py-3 rounded-xl border text-gray-800 text-center w-full"/>
-    <button onclick="copyUPI()" class="bg-indigo-100 hover:bg-indigo-200 text-indigo-700 font-bold px-4 py-3 rounded-xl transition shadow">Copy</button>
-  </div>
-
-  <!-- QR Code -->
-  <div class="flex justify-center mb-4">
-    <img id="qrImage" class="rounded-2xl shadow-md max-w-xs" alt="QR Code"/>
-  </div>
-
-  <!-- UPI Buttons -->
-  <div class="mt-4 grid grid-cols-2 gap-4">
-    <a id="gpayBtn" href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">Google Pay</a>
-    <a id="phonepeBtn" href="#" target="_blank" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">PhonePe</a>
-    <a id="paytmBtn" href="#" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 rounded-2xl shadow text-center transition">Paytm</a>
-    <a id="bhimBtn" href="#" target="_blank" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">BHIM UPI</a>
-  </div>
-
-  <!-- UTR Input -->
-  <div class="mt-6">
-    <label for="utr" class="block text-gray-700 font-semibold mb-2">Enter UTR / Transaction ID</label>
-    <input id="utr" type="text" placeholder="e.g. 123456789012" class="w-full px-4 py-3 rounded-xl border focus:outline-none focus:ring-2 focus:ring-indigo-500 mb-3"/>
-    <button id="submitUTRBtn" onclick="submitUTR()" class="w-full bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-bold py-3 rounded-2xl shadow transition">Submit UTR</button>
-  </div>
-
-  <div id="confirmation" class="mt-6 p-4 bg-green-100 text-green-800 rounded-2xl hidden text-left shadow"></div>
-
-  <p class="text-gray-500 text-sm text-center mt-4">Scan the QR code, copy the UPI ID, or use any app button above to complete payment</p>
+<!-- Header with Countdown -->
+<div class="w-full max-w-xl flex justify-between items-center mb-6">
+  <h1 class="text-3xl font-bold text-indigo-600">UPI Payment Gateway</h1>
+  <div id="timer" class="text-red-600 font-semibold text-lg">Time Left: 9:00</div>
 </div>
 
-<div id="expiredContainer" class="hidden w-full max-w-md bg-white rounded-3xl shadow-2xl p-8 border border-gray-200 text-center">
-  <h1 class="text-3xl font-bold text-red-600 mb-4">Page Expired</h1>
-  <p class="text-gray-700">Your payment session has timed out. Please generate a new link to complete the transaction.</p>
+<!-- Payment Info Card -->
+<div class="w-full max-w-xl bg-white rounded-2xl shadow-lg p-6 mb-6">
+  <div class="text-center mb-4">
+    <h2 id="clientName" class="text-2xl font-semibold text-gray-800"></h2>
+    <p class="text-xl text-green-600 mt-2">₹<span id="amount"></span></p>
+    <p class="text-gray-700 mt-2">UPI: <span id="upiId" class="font-medium"></span>
+      <button onclick="copyUPI()" class="ml-2 px-2 py-1 bg-indigo-500 text-white rounded">Copy</button>
+    </p>
+  </div>
+
+  <!-- Payment Buttons -->
+  <div class="flex flex-col gap-3 mt-6">
+    <a href="#" class="block w-full bg-green-500 text-white py-2 rounded text-center font-semibold">Google Pay</a>
+    <a href="#" class="block w-full bg-blue-500 text-white py-2 rounded text-center font-semibold">PhonePe</a>
+    <a href="#" class="block w-full bg-purple-600 text-white py-2 rounded text-center font-semibold">Paytm</a>
+    <a href="#" class="block w-full bg-red-600 text-white py-2 rounded text-center font-semibold">BHIM UPI</a>
+  </div>
+
+  <!-- UTR Submission -->
+  <div class="mt-6">
+    <form onsubmit="return submitUTR()">
+      <input type="text" id="utrInput" placeholder="Enter 12-digit UTR" class="w-full border p-2 rounded mb-2">
+      <p id="utrError" class="text-red-600 text-sm hidden">UTR must be 12 digits!</p>
+      <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded font-semibold">Submit UTR</button>
+    </form>
+  </div>
+
+  <!-- Success Message -->
+  <div id="successMsg" class="mt-4 text-center hidden">
+    <p class="text-green-700 font-semibold">Dear <span id="clientSuccess"></span> Sir/Mam, your <span id="amountSuccess"></span> payment is successful! Please wait for review.</p>
+  </div>
 </div>
 
 <script>
-const params = new URLSearchParams(window.location.search);
-const app = params.get('app') || 'Payment';
-const client = params.get('pn') || 'Customer';
-const amount = params.get('am') || '0';
-const upi = params.get('pa') || '';
-const qr = params.get('qr');
-const expiryParam = params.get('expiry');
+  // Get URL params
+  const params = new URLSearchParams(window.location.search);
+  const client = params.get('nameInput') || 'Client';
+  const amount = params.get('amntInput') || '0';
+  const upi = params.get('vpaInput') || 'UPI-ID';
 
-document.getElementById('appName').innerText = decodeURIComponent(app);
-document.getElementById('clientName').innerText = decodeURIComponent(client);
-document.getElementById('amount').innerText = `₹${decodeURIComponent(amount)}`;
-document.getElementById('upiId').value = decodeURIComponent(upi);
+  // Display client info
+  document.getElementById('clientName').innerText = client;
+  document.getElementById('amount').innerText = amount;
+  document.getElementById('upiId').innerText = upi;
 
-if (qr) { document.getElementById('qrImage').src = decodeURIComponent(qr); }
-else { document.getElementById('qrImage').style.display = 'none'; }
-
-const upiLink = `upi://pay?pa=${encodeURIComponent(upi)}&pn=${encodeURIComponent(client)}&am=${encodeURIComponent(amount)}&cu=INR`;
-['gpayBtn','phonepeBtn','paytmBtn','bhimBtn'].forEach(id => {
-  document.getElementById(id).href = upiLink;
-});
-
-function copyUPI() { navigator.clipboard.writeText(upi); alert("UPI ID copied!"); }
-
-function submitUTR() {
-  const utr = document.getElementById('utr').value.trim();
-  if (!utr) { alert("Please enter the UTR / Transaction ID."); return; }
-  if (!/^\d{12,}$/.test(utr)) { alert("UTR must be at least 12 digits long."); return; }
-
-  const msg = `Dear "${decodeURIComponent(client)}" Sir/Mam,\n\nYour ₹"${decodeURIComponent(amount)}" payment for "${decodeURIComponent(app)}" has been received successfully.\n\nPlease wait while we review the transaction. You will receive the NOC for loan closing shortly.`;
-
-  const confirmation = document.getElementById('confirmation');
-  confirmation.innerText = msg;
-  confirmation.classList.remove('hidden');
-  confirmation.classList.remove('fade-out');
-
-  document.getElementById('utr').value = '';
-  setTimeout(() => { confirmation.classList.add('fade-out'); }, 5000);
-  setTimeout(() => { confirmation.classList.add('hidden'); }, 8000);
-}
-
-// Countdown timer with button disable
-const timerElement = document.getElementById('timer');
-const expiryTime = expiryParam ? parseInt(expiryParam) : Date.now() + 9*60*1000;
-
-const countdown = setInterval(() => {
-  const now = Date.now();
-  let remaining = Math.floor((expiryTime - now)/1000);
-  if (remaining <= 0) {
-    clearInterval(countdown);
-    document.getElementById('paymentContainer').classList.add('hidden');
-    document.getElementById('expiredContainer').classList.remove('hidden');
-
-    ['gpayBtn','phonepeBtn','paytmBtn','bhimBtn','submitUTRBtn'].forEach(id => {
-      document.getElementById(id).disabled = true;
-    });
-    document.getElementById('utr').disabled = true;
-    return;
+  // Copy UPI
+  function copyUPI() {
+    navigator.clipboard.writeText(upi);
+    alert("UPI copied!");
   }
-  const minutes = Math.floor(remaining/60);
-  const seconds = remaining % 60;
-  timerElement.textContent = `${minutes.toString().padStart(2,'0')}:${seconds.toString().padStart(2,'0')}`;
-}, 1000);
+
+  // Countdown Timer
+  let countdown = 9 * 60;
+  const timerEl = document.getElementById('timer');
+  const timerInterval = setInterval(() => {
+    let minutes = Math.floor(countdown / 60);
+    let seconds = countdown % 60;
+    timerEl.innerText = `Time Left: ${minutes}:${seconds.toString().padStart(2,'0')}`;
+    if(countdown <= 0){
+      clearInterval(timerInterval);
+      document.body.innerHTML = `<div class="text-center mt-20"><h1 class="text-3xl font-bold text-red-600">Session Expired</h1></div>`;
+    }
+    countdown--;
+  }, 1000);
+
+  // Submit UTR
+  function submitUTR() {
+    const utr = document.getElementById('utrInput').value.trim();
+    if(utr.length !== 12) {
+      document.getElementById('utrError').classList.remove('hidden');
+      setTimeout(()=>{ document.getElementById('utrError').classList.add('hidden'); },1500);
+      return false;
+    }
+    document.getElementById('successMsg').classList.remove('hidden');
+    document.getElementById('clientSuccess').innerText = client;
+    document.getElementById('amountSuccess').innerText = `₹${amount}`;
+    return false; // Prevent form submission
+  }
 </script>
 </body>
 </html>
