--- a/pay.html
+++ b/pay.html
@@ -1,97 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>UPI Payment Gateway</title>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center p-6">
 
-<!-- Header with Countdown -->
-<div class="w-full max-w-xl flex justify-between items-center mb-6">
-  <h1 class="text-3xl font-bold text-indigo-600">UPI Payment Gateway</h1>
-  <div id="timer" class="text-red-600 font-semibold text-lg">Time Left: 9:00</div>
-</div>
+<div class="max-w-md w-full bg-white rounded-2xl shadow-xl p-8 relative">
+    <!-- Header + Countdown -->
+    <div class="flex justify-between items-center mb-6">
+        <h1 id="appNameHeader" class="text-2xl font-bold text-indigo-700"></h1>
+        <span id="countdown" class="text-red-500 font-semibold"></span>
+    </div>
 
-<!-- Payment Info Card -->
-<div class="w-full max-w-xl bg-white rounded-2xl shadow-lg p-6 mb-6">
-  <div class="text-center mb-4">
-    <h2 id="clientName" class="text-2xl font-semibold text-gray-800"></h2>
-    <p class="text-xl text-green-600 mt-2">₹<span id="amount"></span></p>
-    <p class="text-gray-700 mt-2">UPI: <span id="upiId" class="font-medium"></span>
-      <button onclick="copyUPI()" class="ml-2 px-2 py-1 bg-indigo-500 text-white rounded">Copy</button>
-    </p>
-  </div>
+    <!-- Client & Amount -->
+    <div class="text-center mb-6">
+        <p id="clientNameDisplay" class="text-xl font-semibold text-gray-800"></p>
+        <p id="amountDisplay" class="text-green-600 font-bold text-2xl"></p>
+    </div>
 
-  <!-- Payment Buttons -->
-  <div class="flex flex-col gap-3 mt-6">
-    <a href="#" class="block w-full bg-green-500 text-white py-2 rounded text-center font-semibold">Google Pay</a>
-    <a href="#" class="block w-full bg-blue-500 text-white py-2 rounded text-center font-semibold">PhonePe</a>
-    <a href="#" class="block w-full bg-purple-600 text-white py-2 rounded text-center font-semibold">Paytm</a>
-    <a href="#" class="block w-full bg-red-600 text-white py-2 rounded text-center font-semibold">BHIM UPI</a>
-  </div>
+    <!-- UPI -->
+    <div class="flex justify-between items-center mb-6">
+        <span id="upiDisplay" class="font-semibold text-indigo-600 break-all"></span>
+        <button onclick="copyUPI()" class="bg-indigo-600 text-white px-3 py-1 rounded hover:bg-indigo-700">Copy</button>
+    </div>
 
-  <!-- UTR Submission -->
-  <div class="mt-6">
-    <form onsubmit="return submitUTR()">
-      <input type="text" id="utrInput" placeholder="Enter 12-digit UTR" class="w-full border p-2 rounded mb-2">
-      <p id="utrError" class="text-red-600 text-sm hidden">UTR must be 12 digits!</p>
-      <button type="submit" class="w-full bg-indigo-600 text-white py-2 rounded font-semibold">Submit UTR</button>
-    </form>
-  </div>
+    <!-- Uploaded QR -->
+    <div class="flex justify-center mb-6">
+        <img id="qrImage" class="w-48 h-48 object-contain rounded-lg border" alt="QR" />
+    </div>
 
-  <!-- Success Message -->
-  <div id="successMsg" class="mt-4 text-center hidden">
-    <p class="text-green-700 font-semibold">Dear <span id="clientSuccess"></span> Sir/Mam, your <span id="amountSuccess"></span> payment is successful! Please wait for review.</p>
-  </div>
+    <!-- Payment Buttons -->
+    <div class="grid grid-cols-2 gap-4 mb-6">
+        <button class="bg-green-500 text-white py-2 rounded hover:bg-green-600">GooglePe</button>
+        <button class="bg-green-700 text-white py-2 rounded hover:bg-green-800">PhonePe</button>
+        <button class="bg-yellow-500 text-white py-2 rounded hover:bg-yellow-600">Paytm</button>
+        <button class="bg-blue-500 text-white py-2 rounded hover:bg-blue-600">BHIM UPI</button>
+    </div>
+
+    <!-- UTR Submission -->
+    <div class="mb-6">
+        <input type="text" id="utrInput" placeholder="Enter 12-digit UTR" class="w-full p-2 border rounded mb-2">
+        <button onclick="submitUTR()" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">Submit UTR</button>
+        <p id="utrError" class="text-red-500 mt-1 hidden">UTR must be 12 digits</p>
+    </div>
+
+    <!-- Success Message -->
+    <div id="successMsg" class="hidden text-center bg-green-100 text-green-800 p-3 rounded">
+        <!-- Filled dynamically -->
+    </div>
 </div>
 
 <script>
-  // Get URL params
-  const params = new URLSearchParams(window.location.search);
-  const client = params.get('nameInput') || 'Client';
-  const amount = params.get('amntInput') || '0';
-  const upi = params.get('vpaInput') || 'UPI-ID';
+const params = new URLSearchParams(window.location.search);
+const appName = params.get('appName') || 'App';
+const clientName = params.get('nameInput') || 'Customer';
+const amount = params.get('amntInput') || '0';
+const upi = params.get('vpaInput') || '';
+const qrData = params.get('qr') || '';
 
-  // Display client info
-  document.getElementById('clientName').innerText = client;
-  document.getElementById('amount').innerText = amount;
-  document.getElementById('upiId').innerText = upi;
+// Populate fields
+document.getElementById('appNameHeader').textContent = appName;
+document.getElementById('clientNameDisplay').textContent = clientName;
+document.getElementById('amountDisplay').textContent = '₹' + amount;
+document.getElementById('upiDisplay').textContent = upi;
 
-  // Copy UPI
-  function copyUPI() {
+if(qrData){
+    document.getElementById('qrImage').src = qrData;
+} else {
+    document.getElementById('qrImage').alt = 'No QR Uploaded';
+}
+
+// Copy UPI
+function copyUPI(){
     navigator.clipboard.writeText(upi);
     alert("UPI copied!");
-  }
+}
 
-  // Countdown Timer
-  let countdown = 9 * 60;
-  const timerEl = document.getElementById('timer');
-  const timerInterval = setInterval(() => {
-    let minutes = Math.floor(countdown / 60);
-    let seconds = countdown % 60;
-    timerEl.innerText = `Time Left: ${minutes}:${seconds.toString().padStart(2,'0')}`;
-    if(countdown <= 0){
-      clearInterval(timerInterval);
-      document.body.innerHTML = `<div class="text-center mt-20"><h1 class="text-3xl font-bold text-red-600">Session Expired</h1></div>`;
+// Countdown Timer
+let timeLeft = 9 * 60; // 9 minutes
+const countdownEl = document.getElementById('countdown');
+const timerInterval = setInterval(() => {
+    const min = Math.floor(timeLeft/60);
+    const sec = timeLeft%60;
+    countdownEl.textContent = `${min}:${sec.toString().padStart(2,'0')}`;
+    if(timeLeft <= 0){
+        clearInterval(timerInterval);
+        document.body.innerHTML = `<div class="text-center mt-20">
+            <h1 class="text-3xl font-bold">Page Expired</h1>
+        </div>`;
     }
-    countdown--;
-  }, 1000);
+    timeLeft--;
+},1000);
 
-  // Submit UTR
-  function submitUTR() {
+// UTR Submission
+function submitUTR(){
     const utr = document.getElementById('utrInput').value.trim();
-    if(utr.length !== 12) {
-      document.getElementById('utrError').classList.remove('hidden');
-      setTimeout(()=>{ document.getElementById('utrError').classList.add('hidden'); },1500);
-      return false;
+    if(utr.length !== 12){
+        document.getElementById('utrError').classList.remove('hidden');
+        return;
     }
-    document.getElementById('successMsg').classList.remove('hidden');
-    document.getElementById('clientSuccess').innerText = client;
-    document.getElementById('amountSuccess').innerText = `₹${amount}`;
-    return false; // Prevent form submission
-  }
+    document.getElementById('utrError').classList.add('hidden');
+    const successDiv = document.getElementById('successMsg');
+    successDiv.innerHTML = `Dear ${clientName} Sir/Mam, your ₹${amount} payment for ${appName} is paid successfully. Please wait while we review the transaction and then you receive NOC of loan closing.`;
+    successDiv.classList.remove('hidden');
+}
 </script>
 </body>
 </html>
