--- a/pay.html
+++ b/pay.html
@@ -1,113 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>UPI Payment Gateway</title>
+<title>UPI Payment</title>
 <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+<style>
+.fade-out { animation: fadeOut 3s forwards; }
+@keyframes fadeOut { from {opacity:1;} to {opacity:0;} }
+button:disabled, a:disabled { opacity:0.5; cursor:not-allowed; pointer-events:none; }
+</style>
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col items-center p-6">
+<body class="bg-gradient-to-r from-purple-50 to-indigo-50 min-h-screen flex flex-col items-center justify-center p-4">
 
-<div class="max-w-md w-full bg-white rounded-2xl shadow-xl p-8 relative">
-    <!-- Header + Countdown -->
-    <div class="flex justify-between items-center mb-6">
-        <h1 id="appNameHeader" class="text-2xl font-bold text-indigo-700"></h1>
-        <span id="countdown" class="text-red-500 font-semibold"></span>
-    </div>
+<div id="paymentContainer" class="max-w-md w-full bg-white rounded-3xl shadow-2xl p-8 border border-gray-200 text-center">
 
-    <!-- Client & Amount -->
-    <div class="text-center mb-6">
-        <p id="clientNameDisplay" class="text-xl font-semibold text-gray-800"></p>
-        <p id="amountDisplay" class="text-green-600 font-bold text-2xl"></p>
-    </div>
+  <!-- Header with Countdown -->
+  <div class="flex justify-between items-center mb-4 
+              bg-gradient-to-r from-indigo-600 via-purple-600 to-pink-500 
+              p-4 rounded-2xl shadow-lg text-white">
+    <h1 id="appName" class="text-3xl font-extrabold"></h1>
+    <div class="text-white font-medium text-lg">Time Left: <span id="timer">09:00</span></div>
+  </div>
 
-    <!-- UPI -->
-    <div class="flex justify-between items-center mb-6">
-        <span id="upiDisplay" class="font-semibold text-indigo-600 break-all"></span>
-        <button onclick="copyUPI()" class="bg-indigo-600 text-white px-3 py-1 rounded hover:bg-indigo-700">Copy</button>
-    </div>
+  <p id="clientName" class="text-xl font-semibold text-gray-700 mb-2"></p>
+  <p id="amount" class="text-2xl font-bold text-green-600 mb-4"></p>
 
-    <!-- Uploaded QR -->
-    <div class="flex justify-center mb-6">
-        <img id="qrImage" class="w-48 h-48 object-contain rounded-lg border" alt="QR" />
-    </div>
+  <!-- UPI ID + Copy -->
+  <div class="flex justify-center items-center gap-2 mb-4">
+    <input id="upiId" type="text" readonly class="px-4 py-3 rounded-xl border text-gray-800 text-center w-full"/>
+    <button onclick="copyUPI()" class="bg-indigo-100 hover:bg-indigo-200 text-indigo-700 font-bold px-4 py-3 rounded-xl transition shadow">Copy</button>
+  </div>
 
-    <!-- Payment Buttons -->
-    <div class="grid grid-cols-2 gap-4 mb-6">
-        <button class="bg-green-500 text-white py-2 rounded hover:bg-green-600">GooglePe</button>
-        <button class="bg-green-700 text-white py-2 rounded hover:bg-green-800">PhonePe</button>
-        <button class="bg-yellow-500 text-white py-2 rounded hover:bg-yellow-600">Paytm</button>
-        <button class="bg-blue-500 text-white py-2 rounded hover:bg-blue-600">BHIM UPI</button>
-    </div>
+  <!-- QR Code -->
+  <div class="flex justify-center mb-4">
+    <img id="qrImage" class="rounded-2xl shadow-md max-w-xs" alt="QR Code"/>
+  </div>
 
-    <!-- UTR Submission -->
-    <div class="mb-6">
-        <input type="text" id="utrInput" placeholder="Enter 12-digit UTR" class="w-full p-2 border rounded mb-2">
-        <button onclick="submitUTR()" class="w-full bg-indigo-600 text-white py-2 rounded hover:bg-indigo-700">Submit UTR</button>
-        <p id="utrError" class="text-red-500 mt-1 hidden">UTR must be 12 digits</p>
-    </div>
+  <!-- UPI Buttons -->
+  <div class="mt-4 grid grid-cols-2 gap-4">
+    <a id="gpayBtn" href="#" target="_blank" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">Google Pay</a>
+    <a id="phonepeBtn" href="#" target="_blank" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">PhonePe</a>
+    <a id="paytmBtn" href="#" target="_blank" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 rounded-2xl shadow text-center transition">Paytm</a>
+    <a id="bhimBtn" href="#" target="_blank" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 rounded-2xl shadow text-center transition">BHIM UPI</a>
+  </div>
 
-    <!-- Success Message -->
-    <div id="successMsg" class="hidden text-center bg-green-100 text-green-800 p-3 rounded">
-        <!-- Filled dynamically -->
-    </div>
+  <!-- UTR Input -->
+  <div class="mt-6">
+    <label for="utr" class="block text-gray-700 font-semibold mb-2">Enter UTR / Transaction ID</label>
+    <input id="utr" type="text" placeholder="e.g. 123456789012" class="w-full px-4 py-3 rounded-xl border focus:outline-none focus:ring-2 focus:ring-indigo-500 mb-3"/>
+    <button id="submitUTRBtn" onclick="submitUTR()" class="w-full bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-bold py-3 rounded-2xl shadow transition">Submit UTR</button>
+  </div>
+
+  <div id="confirmation" class="mt-6 p-4 bg-green-100 text-green-800 rounded-2xl hidden text-left shadow"></div>
+
+  <p class="text-gray-500 text-sm text-center mt-4">Scan the QR code, copy the UPI ID, or use any app button above to complete payment</p>
+</div>
+
+<div id="expiredContainer" class="hidden w-full max-w-md bg-white rounded-3xl shadow-2xl p-8 border border-gray-200 text-center">
+  <h1 class="text-3xl font-bold text-red-600 mb-4">Page Expired</h1>
+  <p class="text-gray-700">Your payment session has timed out. Please generate a new link to complete the transaction.</p>
 </div>
 
 <script>
 const params = new URLSearchParams(window.location.search);
-const appName = params.get('appName') || 'App';
-const clientName = params.get('nameInput') || 'Customer';
-const amount = params.get('amntInput') || '0';
-const upi = params.get('vpaInput') || '';
-const qrData = params.get('qr') || '';
+const app = params.get('app') || 'Payment';
+const client = params.get('pn') || 'Customer';
+const amount = params.get('am') || '0';
+const upi = params.get('pa') || '';
+const qr = params.get('qr');
+const expiryParam = params.get('expiry');
 
-// Populate fields
-document.getElementById('appNameHeader').textContent = appName;
-document.getElementById('clientNameDisplay').textContent = clientName;
-document.getElementById('amountDisplay').textContent = '₹' + amount;
-document.getElementById('upiDisplay').textContent = upi;
+document.getElementById('appName').innerText = decodeURIComponent(app);
+document.getElementById('clientName').innerText = decodeURIComponent(client);
+document.getElementById('amount').innerText = `₹${decodeURIComponent(amount)}`;
+document.getElementById('upiId').value = decodeURIComponent(upi);
 
-if(qrData){
-    document.getElementById('qrImage').src = qrData;
-} else {
-    document.getElementById('qrImage').alt = 'No QR Uploaded';
+if (qr) { document.getElementById('qrImage').src = decodeURIComponent(qr); }
+else { document.getElementById('qrImage').style.display = 'none'; }
+
+const upiLink = `upi://pay?pa=${encodeURIComponent(upi)}&pn=${encodeURIComponent(client)}&am=${encodeURIComponent(amount)}&cu=INR`;
+['gpayBtn','phonepeBtn','paytmBtn','bhimBtn'].forEach(id => {
+  document.getElementById(id).href = upiLink;
+});
+
+function copyUPI() { navigator.clipboard.writeText(upi); alert("UPI ID copied!"); }
+
+function submitUTR() {
+  const utr = document.getElementById('utr').value.trim();
+  if (!utr) { alert("Please enter the UTR / Transaction ID."); return; }
+  if (!/^\d{12,}$/.test(utr)) { alert("UTR must be at least 12 digits long."); return; }
+
+  const msg = `Dear "${decodeURIComponent(client)}" Sir/Mam,\n\nYour ₹"${decodeURIComponent(amount)}" payment for "${decodeURIComponent(app)}" has been received successfully.\n\nPlease wait while we review the transaction. You will receive the NOC for loan closing shortly.`;
+
+  const confirmation = document.getElementById('confirmation');
+  confirmation.innerText = msg;
+  confirmation.classList.remove('hidden');
+  confirmation.classList.remove('fade-out');
+
+  document.getElementById('utr').value = '';
+  setTimeout(() => { confirmation.classList.add('fade-out'); }, 5000);
+  setTimeout(() => { confirmation.classList.add('hidden'); }, 8000);
 }
 
-// Copy UPI
-function copyUPI(){
-    navigator.clipboard.writeText(upi);
-    alert("UPI copied!");
-}
+// Countdown timer with button disable
+const timerElement = document.getElementById('timer');
+const expiryTime = expiryParam ? parseInt(expiryParam) : Date.now() + 9*60*1000;
 
-// Countdown Timer
-let timeLeft = 9 * 60; // 9 minutes
-const countdownEl = document.getElementById('countdown');
-const timerInterval = setInterval(() => {
-    const min = Math.floor(timeLeft/60);
-    const sec = timeLeft%60;
-    countdownEl.textContent = `${min}:${sec.toString().padStart(2,'0')}`;
-    if(timeLeft <= 0){
-        clearInterval(timerInterval);
-        document.body.innerHTML = `<div class="text-center mt-20">
-            <h1 class="text-3xl font-bold">Page Expired</h1>
-        </div>`;
-    }
-    timeLeft--;
-},1000);
+const countdown = setInterval(() => {
+  const now = Date.now();
+  let remaining = Math.floor((expiryTime - now)/1000);
+  if (remaining <= 0) {
+    clearInterval(countdown);
+    document.getElementById('paymentContainer').classList.add('hidden');
+    document.getElementById('expiredContainer').classList.remove('hidden');
 
-// UTR Submission
-function submitUTR(){
-    const utr = document.getElementById('utrInput').value.trim();
-    if(utr.length !== 12){
-        document.getElementById('utrError').classList.remove('hidden');
-        return;
-    }
-    document.getElementById('utrError').classList.add('hidden');
-    const successDiv = document.getElementById('successMsg');
-    successDiv.innerHTML = `Dear ${clientName} Sir/Mam, your ₹${amount} payment for ${appName} is paid successfully. Please wait while we review the transaction and then you receive NOC of loan closing.`;
-    successDiv.classList.remove('hidden');
-}
+    ['gpayBtn','phonepeBtn','paytmBtn','bhimBtn','submitUTRBtn'].forEach(id => {
+      document.getElementById(id).disabled = true;
+    });
+    document.getElementById('utr').disabled = true;
+    return;
+  }
+  const minutes = Math.floor(remaining/60);
+  const seconds = remaining % 60;
+  timerElement.textContent = `${minutes.toString().padStart(2,'0')}:${seconds.toString().padStart(2,'0')}`;
+}, 1000);
 </script>
 </body>
 </html>
